--- a/Black Theme Registration/Regsitration.css
+++ b/Black Theme Registration/Regsitration.css
@@ -9,7 +9,6 @@ body {
 
 .box {
   position: relative;
-  flex-basis: 25%;
   background: rgba(255, 255, 255, 0.9);
   box-sizing: border-box;
   margin: auto;
@@ -139,11 +138,11 @@ background-color:white;}
   }
 }
 
-
 @media(max-width:800px)
 {
   .box
   {
+    position: absolute;
     width: 80vw;
     left: 10vw;
   }
