--- a/Login Page Design/CSS/style.css
+++ b/Login Page Design/CSS/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .main {
-    background-image: url(/bg.png);
+    background-image: url(/Images/bg.png);
     background-position: center;
     background-size: cover;
     position: relative;
